静态代码检查, 修改部分问题